fixed layout issues